--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "part7",
+  "name": "part8",
   "version": "1.0.0",
   "description": "build a toggle component",
   "main": "src/main.js",
@@ -75,8 +75,5 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-  "keywords": [
-    "component-pattern",
-    "vue"
-  ]
+  "keywords": []
 }
